--
-- PostgreSQL database dump
--

\restrict erWt6QvZbWfXmBw32x4OXo6kNaHJ6enroTPYTQ9kf1vV8wq8k8Pq3uVKTRcGJMs

-- Dumped from database version 16.10
-- Dumped by pg_dump version 16.10

SET statement_timeout = 0;
SET lock_timeout = 0;
SET idle_in_transaction_session_timeout = 0;
SET client_encoding = 'UTF8';
SET standard_conforming_strings = on;
SELECT pg_catalog.set_config('search_path', '', false);
SET check_function_bodies = false;
SET xmloption = content;
SET client_min_messages = warning;
SET row_security = off;

SET default_tablespace = '';

SET default_table_access_method = heap;

--
-- Name: doctor; Type: TABLE; Schema: public; Owner: myuser
--

CREATE TABLE public.doctor (
    user_id integer,
    doctor_id integer NOT NULL,
    clinic_address character varying(255),
    first_name character varying(120) NOT NULL,
    last_name character varying(120) NOT NULL,
    license_number character varying(100),
    phone character varying(30),
    specialization character varying(150),
    active boolean DEFAULT true NOT NULL
);


ALTER TABLE public.doctor OWNER TO myuser;

--
-- Name: doctor_doctor_id_seq; Type: SEQUENCE; Schema: public; Owner: myuser
--

ALTER TABLE public.doctor ALTER COLUMN doctor_id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.doctor_doctor_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);


--
-- Name: medicine; Type: TABLE; Schema: public; Owner: myuser
--

CREATE TABLE public.medicine (
    medicine_id integer NOT NULL,
    contraindications text,
    description text,
    dosage_form character varying(255),
    generic_name character varying(255),
    manufacturer character varying(255),
    medicine_name character varying(255),
    side_effects text,
    strength character varying(255),
    active boolean DEFAULT true NOT NULL
);


ALTER TABLE public.medicine OWNER TO myuser;

--
-- Name: medicine_medicine_id_seq; Type: SEQUENCE; Schema: public; Owner: myuser
--

ALTER TABLE public.medicine ALTER COLUMN medicine_id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.medicine_medicine_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);


--
-- Name: patient; Type: TABLE; Schema: public; Owner: myuser
--

CREATE TABLE public.patient (
    patient_id integer NOT NULL,
    address character varying(255),
    allergies character varying(255),
    blood_type character varying(255),
    date_of_birth date,
    gender character varying(20),
    medical_history character varying(255),
    name character varying(255) NOT NULL,
    phone character varying(30),
    user_id integer NOT NULL,
    active boolean DEFAULT true NOT NULL
);


ALTER TABLE public.patient OWNER TO myuser;

--
-- Name: patient_doctor; Type: TABLE; Schema: public; Owner: myuser
--

CREATE TABLE public.patient_doctor (
    patient_id integer NOT NULL,
    doctor_id bigint NOT NULL
);


ALTER TABLE public.patient_doctor OWNER TO myuser;

--
-- Name: patient_patient_id_seq; Type: SEQUENCE; Schema: public; Owner: myuser
--

ALTER TABLE public.patient ALTER COLUMN patient_id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.patient_patient_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);


--
-- Name: prescription; Type: TABLE; Schema: public; Owner: myuser
--

CREATE TABLE public.prescription (
    prescription_id integer NOT NULL,
    created_at timestamp(6) without time zone,
    end_date date,
    notes oid,
    route character varying(100),
    start_date date,
    updated_at timestamp(6) without time zone,
    doctor_id integer,
    medicine_id integer,
    patient_id integer,
    dosage_amount numeric(10,2),
    dosage_unit character varying(32),
    time_zone character varying(64) DEFAULT 'UTC'::character varying NOT NULL,
    CONSTRAINT prescription_date_range_chk CHECK (((end_date IS NULL) OR (end_date >= start_date)))
);


ALTER TABLE public.prescription OWNER TO myuser;

--
-- Name: prescription_day_time; Type: TABLE; Schema: public; Owner: myuser
--

CREATE TABLE public.prescription_day_time (
    prescription_id integer NOT NULL,
    time_of_day time(6) without time zone
);


ALTER TABLE public.prescription_day_time OWNER TO myuser;

--
-- Name: prescription_dosage; Type: TABLE; Schema: public; Owner: myuser
--

CREATE TABLE public.prescription_dosage (
    dosage_id integer NOT NULL,
    condition character varying(150),
    dosage_amount character varying(255),
    dosage_sequence integer,
    time_of_day time(6) without time zone,
    prescription_id integer NOT NULL,
    condition_description character varying(255)
);


ALTER TABLE public.prescription_dosage OWNER TO myuser;

--
-- Name: prescription_dosage_dosage_id_seq; Type: SEQUENCE; Schema: public; Owner: myuser
--

ALTER TABLE public.prescription_dosage ALTER COLUMN dosage_id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.prescription_dosage_dosage_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);


--
-- Name: prescription_prescription_id_seq; Type: SEQUENCE; Schema: public; Owner: myuser
--

ALTER TABLE public.prescription ALTER COLUMN prescription_id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.prescription_prescription_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);


--
-- Name: prescription_schedule; Type: TABLE; Schema: public; Owner: myuser
--

CREATE TABLE public.prescription_schedule (
    prescription_id integer NOT NULL,
    day_of_week character varying(16) NOT NULL,
    time_of_day time(6) without time zone NOT NULL,
    CONSTRAINT prescription_schedule_day_of_week_check CHECK (((day_of_week)::text = ANY ((ARRAY['MONDAY'::character varying, 'TUESDAY'::character varying, 'WEDNESDAY'::character varying, 'THURSDAY'::character varying, 'FRIDAY'::character varying, 'SATURDAY'::character varying, 'SUNDAY'::character varying])::text[])))
);


ALTER TABLE public.prescription_schedule OWNER TO myuser;

--
-- Name: role; Type: TABLE; Schema: public; Owner: myuser
--

CREATE TABLE public.role (
    id bigint NOT NULL,
    role_name character varying(255),
    role_id integer NOT NULL,
    description text
);


ALTER TABLE public.role OWNER TO myuser;

--
-- Name: role_id_seq; Type: SEQUENCE; Schema: public; Owner: myuser
--

ALTER TABLE public.role ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.role_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);


--
-- Name: role_role_id_seq; Type: SEQUENCE; Schema: public; Owner: myuser
--

ALTER TABLE public.role ALTER COLUMN role_id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.role_role_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);


--
-- Name: schedule; Type: TABLE; Schema: public; Owner: myuser
--

CREATE TABLE public.schedule (
    id integer NOT NULL,
    medicine_id integer,
    start_date timestamp without time zone NOT NULL,
    end_date timestamp without time zone,
    time_of_day time without time zone,
    condition_description character varying(255),
    interval_days integer
);


ALTER TABLE public.schedule OWNER TO myuser;

--
-- Name: schedule_days; Type: TABLE; Schema: public; Owner: myuser
--

CREATE TABLE public.schedule_days (
    prescription_id integer NOT NULL,
    day_of_week character varying(255)
);


ALTER TABLE public.schedule_days OWNER TO myuser;

--
-- Name: schedule_id_seq; Type: SEQUENCE; Schema: public; Owner: myuser
--

CREATE SEQUENCE public.schedule_id_seq
    AS integer
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1;


ALTER SEQUENCE public.schedule_id_seq OWNER TO myuser;

--
-- Name: schedule_id_seq; Type: SEQUENCE OWNED BY; Schema: public; Owner: myuser
--

ALTER SEQUENCE public.schedule_id_seq OWNED BY public.schedule.id;


--
-- Name: user_role; Type: TABLE; Schema: public; Owner: myuser
--

CREATE TABLE public.user_role (
    user_id integer NOT NULL,
    role_id bigint NOT NULL
);


ALTER TABLE public.user_role OWNER TO myuser;

--
-- Name: users; Type: TABLE; Schema: public; Owner: myuser
--

CREATE TABLE public.users (
    user_id integer NOT NULL,
    email character varying(255) NOT NULL,
    name character varying(255),
    password character varying(255) NOT NULL,
    created_at timestamp(6) without time zone,
    updated_at timestamp(6) without time zone,
    username character varying(255)
);


ALTER TABLE public.users OWNER TO myuser;

--
-- Name: users_user_id_seq; Type: SEQUENCE; Schema: public; Owner: myuser
--

ALTER TABLE public.users ALTER COLUMN user_id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.users_user_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);


--
-- Name: schedule id; Type: DEFAULT; Schema: public; Owner: myuser
--

ALTER TABLE ONLY public.schedule ALTER COLUMN id SET DEFAULT nextval('public.schedule_id_seq'::regclass);


--
-- Data for Name: doctor; Type: TABLE DATA; Schema: public; Owner: myuser
--

COPY public.doctor (user_id, doctor_id, clinic_address, first_name, last_name, license_number, phone, specialization, active) FROM stdin;
8	2	test 123	Syed	Zohair	123	123	test	t
\.


--
-- Data for Name: medicine; Type: TABLE DATA; Schema: public; Owner: myuser
--

COPY public.medicine (medicine_id, contraindications, description, dosage_form, generic_name, manufacturer, medicine_name, side_effects, strength, active) FROM stdin;
3	Active liver disease, pregnancy	Lowers cholesterol and reduces risk of heart disease.	Tablet	Atorvastatin	Pfizer	Lipitor	Muscle pain, liver enzyme abnormalities.	20 mg	t
4	Severe cardiac disorders, hypersensitivity to salbutamol	Bronchodilator for asthma and COPD.	Inhaler	Salbutamol	GlaxoSmithKline	Ventolin	Tremor, headache, palpitations.	100 mcg	t
5	Renal impairment, metabolic acidosis	Used to control blood sugar levels in type 2 diabetes.	Tablet	Metformin Hydrochloride	Merck	Metformin	Nausea, diarrhea, abdominal discomfort.	500 mg	t
1	Severe liver disease, hypersensitivity to paracetamol	Used to relieve pain and reduce fever.	Tablet	Paracetamol	GSK	Panadol	Nausea, rash, liver damage with overdose.	500 mg	t
2	Allergy to penicillin, severe renal impairment	Broad-spectrum antibiotic for bacterial infections.	Capsule	Amoxicillin	Pfizer	Amoxil	Diarrhea, rash, nausea.	250 mg	f
6	\N		pill	Prograf		tacrolimus	\N		f
8	Hypersensitivity to tacrolimus or any component of the formulation\nSevere liver impairment\nConcurrent use with drugs that strongly inhibit or induce CYP3A4 (without monitoring)\nPregnancy and breastfeeding unless clearly indicated and monitored	Prograf (Tacrolimus) is an immunosuppressant used to prevent organ transplant rejection. It works by inhibiting T-lymphocyte activation, reducing the immune system’s response to the transplanted organ.	Capsule	Tacrolimus	Astellas	Prograf	May cause tremor, headache, nausea, high blood pressure, kidney dysfunction, or increased risk of infections.	1 mg	t
\.


--
-- Data for Name: patient; Type: TABLE DATA; Schema: public; Owner: myuser
--

COPY public.patient (patient_id, address, allergies, blood_type, date_of_birth, gender, medical_history, name, phone, user_id, active) FROM stdin;
1	\N	\N	\N	\N	\N	\N	Ayman Youssef	\N	7	t
9	\N	\N	\N	\N	\N	\N	role test	\N	13	t
4	123 home office	soup	o-	2001-12-02	male	died in 1956	Dr. Ben Dover	050 000 0000	9	t
2	dubai	fun	O-	2003-12-02	\N	blah blah blah	Syed Zohair	1234567890	8	t
\.


--
-- Data for Name: patient_doctor; Type: TABLE DATA; Schema: public; Owner: myuser
--

COPY public.patient_doctor (patient_id, doctor_id) FROM stdin;
\.


--
-- Data for Name: prescription; Type: TABLE DATA; Schema: public; Owner: myuser
--

COPY public.prescription (prescription_id, created_at, end_date, notes, route, start_date, updated_at, doctor_id, medicine_id, patient_id, dosage_amount, dosage_unit, time_zone) FROM stdin;
1	2025-11-05 10:02:28.82487	\N	\N	\N	2025-11-05	2025-11-05 10:02:28.82487	\N	6	2	3.00	pill	UTC
2	2025-11-05 10:02:47.588582	\N	\N	\N	2025-11-05	2025-11-05 10:02:47.588582	\N	6	2	2.00	pill	UTC
3	2025-12-09 12:48:12.511783	\N	\N	\N	2022-01-01	2025-12-09 12:48:12.511783	\N	8	1	1.00	TABLET	Asia/Dubai
\.


--
-- Data for Name: prescription_day_time; Type: TABLE DATA; Schema: public; Owner: myuser
--

COPY public.prescription_day_time (prescription_id, time_of_day) FROM stdin;
1	10:00:00
2	22:00:00
\.


--
-- Data for Name: prescription_dosage; Type: TABLE DATA; Schema: public; Owner: myuser
--

COPY public.prescription_dosage (dosage_id, condition, dosage_amount, dosage_sequence, time_of_day, prescription_id, condition_description) FROM stdin;
\.


--
-- Data for Name: prescription_schedule; Type: TABLE DATA; Schema: public; Owner: myuser
--

COPY public.prescription_schedule (prescription_id, day_of_week, time_of_day) FROM stdin;
3	TUESDAY	10:00:00
3	WEDNESDAY	10:00:00
3	THURSDAY	10:00:00
3	TUESDAY	22:00:00
3	SATURDAY	10:00:00
3	MONDAY	22:00:00
3	FRIDAY	22:00:00
3	FRIDAY	10:00:00
3	SUNDAY	10:00:00
3	MONDAY	10:00:00
3	SUNDAY	22:00:00
3	WEDNESDAY	22:00:00
3	THURSDAY	22:00:00
3	SATURDAY	22:00:00
\.


--
-- Data for Name: role; Type: TABLE DATA; Schema: public; Owner: myuser
--

COPY public.role (id, role_name, role_id, description) FROM stdin;
1	PATIENT	1	\N
2	ADMIN	2	\N
3	DOCTOR	3	\N
\.


--
-- Data for Name: schedule; Type: TABLE DATA; Schema: public; Owner: myuser
--

COPY public.schedule (id, medicine_id, start_date, end_date, time_of_day, condition_description, interval_days) FROM stdin;
\.


--
-- Data for Name: schedule_days; Type: TABLE DATA; Schema: public; Owner: myuser
--

COPY public.schedule_days (prescription_id, day_of_week) FROM stdin;
\.


--
-- Data for Name: user_role; Type: TABLE DATA; Schema: public; Owner: myuser
--

COPY public.user_role (user_id, role_id) FROM stdin;
6	2
9	1
9	3
6	1
6	3
13	2
13	1
7	1
8	1
8	3
\.


--
-- Data for Name: users; Type: TABLE DATA; Schema: public; Owner: myuser
--

COPY public.users (user_id, email, name, password, created_at, updated_at, username) FROM stdin;
6	hewo7536@gmail.com	Abdelrahman Awad	$2a$10$HVXh5aucgpCA3hNqCTBvWON0L2qqqyLu0Ev9vCpK8A5iVvgtptree	2025-11-04 13:05:25.091658	2025-11-04 13:05:25.091658	KoalaMan
9	doctor@hospital.com	Dr. Ben Dover	$2a$10$loT1KvUaj9jl7tVTXlkqy.0fYw8ZkgC0r2l1/YOcqciB5y8zR07wK	2025-11-04 14:42:52.779536	2025-11-04 14:47:21.128341	DoctorMan1986
13	test@gmail.com	role test	$2a$10$u6pMhdkUEv5aDT2B9U/gDOIgeGuV9C5rPKDPUgmUj7/VMOVS9HZyW	2025-12-08 10:42:27.70977	2025-12-08 10:42:53.375529	\N
7	vymn@killall.systems	Ayman Youssef	$2a$10$.V/YSnSV5EGCvvIWV9Ve7ebdgoxyi.tXdh5tsHiUOv8c5LopItGC.	2025-11-04 13:18:39.27215	2025-12-09 13:17:40.054824	vymn
8	syed@zohair.ae	Syed Zohair	$2a$10$N4RaFMwnyjNSv/lI/XytF.8Na4mnB3fBY3U9oEvC93TNQ9EhHkiZe	2025-11-04 13:21:16.600076	2025-12-09 13:18:45.002755	PottatoFarmer
\.


--
-- Name: doctor_doctor_id_seq; Type: SEQUENCE SET; Schema: public; Owner: myuser
--

SELECT pg_catalog.setval('public.doctor_doctor_id_seq', 2, true);


--
-- Name: medicine_medicine_id_seq; Type: SEQUENCE SET; Schema: public; Owner: myuser
--

SELECT pg_catalog.setval('public.medicine_medicine_id_seq', 8, true);


--
-- Name: patient_patient_id_seq; Type: SEQUENCE SET; Schema: public; Owner: myuser
--

SELECT pg_catalog.setval('public.patient_patient_id_seq', 9, true);


--
-- Name: prescription_dosage_dosage_id_seq; Type: SEQUENCE SET; Schema: public; Owner: myuser
--

SELECT pg_catalog.setval('public.prescription_dosage_dosage_id_seq', 1, false);


--
-- Name: prescription_prescription_id_seq; Type: SEQUENCE SET; Schema: public; Owner: myuser
--

SELECT pg_catalog.setval('public.prescription_prescription_id_seq', 3, true);


--
-- Name: role_id_seq; Type: SEQUENCE SET; Schema: public; Owner: myuser
--

SELECT pg_catalog.setval('public.role_id_seq', 3, true);


--
-- Name: role_role_id_seq; Type: SEQUENCE SET; Schema: public; Owner: myuser
--

SELECT pg_catalog.setval('public.role_role_id_seq', 3, true);


--
-- Name: schedule_id_seq; Type: SEQUENCE SET; Schema: public; Owner: myuser
--

SELECT pg_catalog.setval('public.schedule_id_seq', 4, true);


--
-- Name: users_user_id_seq; Type: SEQUENCE SET; Schema: public; Owner: myuser
--

SELECT pg_catalog.setval('public.users_user_id_seq', 13, true);


--
-- Name: doctor doctor_doctor_id_unique; Type: CONSTRAINT; Schema: public; Owner: myuser
--

ALTER TABLE ONLY public.doctor
    ADD CONSTRAINT doctor_doctor_id_unique UNIQUE (doctor_id);


--
-- Name: doctor doctor_pkey; Type: CONSTRAINT; Schema: public; Owner: myuser
--

ALTER TABLE ONLY public.doctor
    ADD CONSTRAINT doctor_pkey PRIMARY KEY (doctor_id);


--
-- Name: medicine medicine_pkey; Type: CONSTRAINT; Schema: public; Owner: myuser
--

ALTER TABLE ONLY public.medicine
    ADD CONSTRAINT medicine_pkey PRIMARY KEY (medicine_id);


--
-- Name: patient_doctor patient_doctor_pkey; Type: CONSTRAINT; Schema: public; Owner: myuser
--

ALTER TABLE ONLY public.patient_doctor
    ADD CONSTRAINT patient_doctor_pkey PRIMARY KEY (patient_id, doctor_id);


--
-- Name: patient patient_pkey; Type: CONSTRAINT; Schema: public; Owner: myuser
--

ALTER TABLE ONLY public.patient
    ADD CONSTRAINT patient_pkey PRIMARY KEY (patient_id);


--
-- Name: prescription_dosage prescription_dosage_pkey; Type: CONSTRAINT; Schema: public; Owner: myuser
--

ALTER TABLE ONLY public.prescription_dosage
    ADD CONSTRAINT prescription_dosage_pkey PRIMARY KEY (dosage_id);


--
-- Name: prescription prescription_pkey; Type: CONSTRAINT; Schema: public; Owner: myuser
--

ALTER TABLE ONLY public.prescription
    ADD CONSTRAINT prescription_pkey PRIMARY KEY (prescription_id);


--
-- Name: prescription_schedule prescription_schedule_pkey; Type: CONSTRAINT; Schema: public; Owner: myuser
--

ALTER TABLE ONLY public.prescription_schedule
    ADD CONSTRAINT prescription_schedule_pkey PRIMARY KEY (prescription_id, day_of_week, time_of_day);


--
-- Name: role role_pkey; Type: CONSTRAINT; Schema: public; Owner: myuser
--

ALTER TABLE ONLY public.role
    ADD CONSTRAINT role_pkey PRIMARY KEY (id);


--
-- Name: schedule schedule_pkey; Type: CONSTRAINT; Schema: public; Owner: myuser
--

ALTER TABLE ONLY public.schedule
    ADD CONSTRAINT schedule_pkey PRIMARY KEY (id);


--
-- Name: doctor uk3q0j5r6i4e9k3afhypo6uljph; Type: CONSTRAINT; Schema: public; Owner: myuser
--

ALTER TABLE ONLY public.doctor
    ADD CONSTRAINT uk3q0j5r6i4e9k3afhypo6uljph UNIQUE (user_id);


--
-- Name: users uk6dotkott2kjsp8vw4d0m25fb7; Type: CONSTRAINT; Schema: public; Owner: myuser
--

ALTER TABLE ONLY public.users
    ADD CONSTRAINT uk6dotkott2kjsp8vw4d0m25fb7 UNIQUE (email);


--
-- Name: patient uk6i3fp8wcdxk473941mbcvdao4; Type: CONSTRAINT; Schema: public; Owner: myuser
--

ALTER TABLE ONLY public.patient
    ADD CONSTRAINT uk6i3fp8wcdxk473941mbcvdao4 UNIQUE (user_id);


--
-- Name: users ukr43af9ap4edm43mmtq01oddj6; Type: CONSTRAINT; Schema: public; Owner: myuser
--

ALTER TABLE ONLY public.users
    ADD CONSTRAINT ukr43af9ap4edm43mmtq01oddj6 UNIQUE (username);


--
-- Name: user_role user_role_pkey; Type: CONSTRAINT; Schema: public; Owner: myuser
--

ALTER TABLE ONLY public.user_role
    ADD CONSTRAINT user_role_pkey PRIMARY KEY (user_id, role_id);


--
-- Name: users users_pkey; Type: CONSTRAINT; Schema: public; Owner: myuser
--

ALTER TABLE ONLY public.users
    ADD CONSTRAINT users_pkey PRIMARY KEY (user_id);


--
-- Name: idx_doctor_user_id; Type: INDEX; Schema: public; Owner: myuser
--

CREATE INDEX idx_doctor_user_id ON public.doctor USING btree (user_id);


--
-- Name: idx_medicine_active; Type: INDEX; Schema: public; Owner: myuser
--

CREATE INDEX idx_medicine_active ON public.medicine USING btree (active);


--
-- Name: idx_patient_user_id; Type: INDEX; Schema: public; Owner: myuser
--

CREATE INDEX idx_patient_user_id ON public.patient USING btree (user_id);


--
-- Name: idx_prescription_medicine; Type: INDEX; Schema: public; Owner: myuser
--

CREATE INDEX idx_prescription_medicine ON public.prescription USING btree (medicine_id);


--
-- Name: idx_prescription_patient; Type: INDEX; Schema: public; Owner: myuser
--

CREATE INDEX idx_prescription_patient ON public.prescription USING btree (patient_id);


--
-- Name: doctor fk11wrxiolc8qa2e64s32xc2yy4; Type: FK CONSTRAINT; Schema: public; Owner: myuser
--

ALTER TABLE ONLY public.doctor
    ADD CONSTRAINT fk11wrxiolc8qa2e64s32xc2yy4 FOREIGN KEY (user_id) REFERENCES public.users(user_id);


--
-- Name: prescription fk42wq6l9p044tmxv6emix0ejcq; Type: FK CONSTRAINT; Schema: public; Owner: myuser
--

ALTER TABLE ONLY public.prescription
    ADD CONSTRAINT fk42wq6l9p044tmxv6emix0ejcq FOREIGN KEY (medicine_id) REFERENCES public.medicine(medicine_id);


--
-- Name: patient_doctor fk_patientdoctor_doctor; Type: FK CONSTRAINT; Schema: public; Owner: myuser
--

ALTER TABLE ONLY public.patient_doctor
    ADD CONSTRAINT fk_patientdoctor_doctor FOREIGN KEY (doctor_id) REFERENCES public.doctor(doctor_id);


--
-- Name: prescription fk_prescription_doctor; Type: FK CONSTRAINT; Schema: public; Owner: myuser
--

ALTER TABLE ONLY public.prescription
    ADD CONSTRAINT fk_prescription_doctor FOREIGN KEY (doctor_id) REFERENCES public.doctor(doctor_id);


--
-- Name: schedule_days fk_schedule_days_prescription; Type: FK CONSTRAINT; Schema: public; Owner: myuser
--

ALTER TABLE ONLY public.schedule_days
    ADD CONSTRAINT fk_schedule_days_prescription FOREIGN KEY (prescription_id) REFERENCES public.prescription(prescription_id) ON DELETE CASCADE;


--
-- Name: user_role fka68196081fvovjhkek5m97n3y; Type: FK CONSTRAINT; Schema: public; Owner: myuser
--

ALTER TABLE ONLY public.user_role
    ADD CONSTRAINT fka68196081fvovjhkek5m97n3y FOREIGN KEY (role_id) REFERENCES public.role(id);


--
-- Name: prescription_dosage fkgvvh0dcif07u0rly4ic8svnfj; Type: FK CONSTRAINT; Schema: public; Owner: myuser
--

ALTER TABLE ONLY public.prescription_dosage
    ADD CONSTRAINT fkgvvh0dcif07u0rly4ic8svnfj FOREIGN KEY (prescription_id) REFERENCES public.prescription(prescription_id);


--
-- Name: patient fkie6vajiyur53rjcl5nc2pe83t; Type: FK CONSTRAINT; Schema: public; Owner: myuser
--

ALTER TABLE ONLY public.patient
    ADD CONSTRAINT fkie6vajiyur53rjcl5nc2pe83t FOREIGN KEY (user_id) REFERENCES public.users(user_id);


--
-- Name: user_role fkj345gk1bovqvfame88rcx7yyx; Type: FK CONSTRAINT; Schema: public; Owner: myuser
--

ALTER TABLE ONLY public.user_role
    ADD CONSTRAINT fkj345gk1bovqvfame88rcx7yyx FOREIGN KEY (user_id) REFERENCES public.users(user_id);


--
-- Name: prescription_schedule fknvnacde9d22wqb5x5xnv6t2qd; Type: FK CONSTRAINT; Schema: public; Owner: myuser
--

ALTER TABLE ONLY public.prescription_schedule
    ADD CONSTRAINT fknvnacde9d22wqb5x5xnv6t2qd FOREIGN KEY (prescription_id) REFERENCES public.prescription(prescription_id);


--
-- Name: prescription fkqrlh184tfvdi95erwl65p4xj3; Type: FK CONSTRAINT; Schema: public; Owner: myuser
--

ALTER TABLE ONLY public.prescription
    ADD CONSTRAINT fkqrlh184tfvdi95erwl65p4xj3 FOREIGN KEY (patient_id) REFERENCES public.patient(patient_id);


--
-- Name: patient_doctor fktmtnhw88h1tnjg6i8pa6i3qao; Type: FK CONSTRAINT; Schema: public; Owner: myuser
--

ALTER TABLE ONLY public.patient_doctor
    ADD CONSTRAINT fktmtnhw88h1tnjg6i8pa6i3qao FOREIGN KEY (patient_id) REFERENCES public.patient(patient_id);


--
-- Name: prescription_day_time fktnwdbvkqxv2blxviyxci742kk; Type: FK CONSTRAINT; Schema: public; Owner: myuser
--

ALTER TABLE ONLY public.prescription_day_time
    ADD CONSTRAINT fktnwdbvkqxv2blxviyxci742kk FOREIGN KEY (prescription_id) REFERENCES public.prescription(prescription_id);


--
-- PostgreSQL database dump complete
--

\unrestrict erWt6QvZbWfXmBw32x4OXo6kNaHJ6enroTPYTQ9kf1vV8wq8k8Pq3uVKTRcGJMs

